--- a/Perspective_Android/app/src/main/res/layout/activity_navigation.xml
+++ b/Perspective_Android/app/src/main/res/layout/activity_navigation.xml
@@ -27,14 +27,13 @@
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:scrollbars="none"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:scrollbars="none">
 
             <TableLayout
                 android:id="@+id/feedTable"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:padding="10dip"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:isScrollContainer="true">
             </TableLayout>
         </ScrollView>
